<resources>
    <string-array name="language_option">
        <item>Select Language</item>
        <item>English</item>
        <item>Қазақ</item>
        <item>Русский</item>
        <item>中文</item>
    </string-array>
    <string name="adMob_for_release" translatable="false">
        ca-app-pub-8472985163028614~1818323138</string>
    <string name="adMob_for_testBanner" translatable="false">
        ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">K-chess</string>
    <string name="login">Login</string>
    <string name="passwordName">Password</string>
    <string name="SignInText">Sign in</string>
    <string name="ForgotPassText">Forgot password</string>
    <string name="create_account_text">Create Account</string>
    <string name="usernameText_hint">Username</string>
    <string name="emailText">Email</string>
    <string name="confirm_passwordText">Confirm Password</string>
    <string name="onlineGameText">Play online</string>
    <string name="offlineGameText">Online game</string>
    <string name="communityText">Community</string>
    <string name="optionText">Option</string>
    <string name="rulesText">Rules</string>
    <string name="EmptyInput">Empty Input</string>
    <string name="EmptyNameInputOrLess">Name is empty or less that 4 letters</string>
    <string name="InputEmailText">Input email</string>
    <string name="RegisterSuccess">Register successful</string>
    <string name="OOPS_TryAgain">OOPS! Please try again</string>
    <string name="notificationName">Notification</string>
    <string name="soundText">Music</string>
    <string name="changeUserText">Change user</string>
    <string name="backText">Back</string>
    <string name="okText">OK</string>
    <string name="errorLoginOrPass">Your password or login is wrong</string>
    <string name="shareApp">Share this app</string>
    <string name="fullRulesRealText">Common rules: \n
        1)Players can only move their chess pieces on their turn.
        \n \n
        2) If a player is placed in check, that player must wait until their designated turn before that player can respond to the threat. However, in most variations, in the event a players move places an opponent in check at the hands of another opponent for example, by moving his knight so as to expose one opponents king to anothers rook), the second opponent is forbidden from capturing the firsts king until he has a chance to deal with the check. Some variations prohibit moves that would cause one opponent to be in check at the hands of another. These restrictions are intended to discourage collusion between players, as further discussed below.
        \n\n
        3) Pawns move forward only, unless attacking in a diagonal forward manner.
        \n \n
        4)In the event a pawn reaches the Kings row to the left, right or directly across, that pawn shall receive all the privileges of a pawn reaching Kings row during a traditional chess game (i.e. promoting to a queen (most commonly), a rook, a bishop, or a knight). \n5)It is legal for two or more of the players to team up.</string>
    <string name="achievements">Achievements</string>
    <string name="reload">Reload</string>
    <string name="mode1">2-player, standard chess board</string>
    <string name="mode2">2-player, extended board</string>
    <string name="mode3">4-player in 2 teams</string>
    <string name="mode4">4-player, no teams</string>
    <string name="theirturn">Their turn:</string>
    <string name="yourturn">Your turn:</string>
    <string name="localmatches">Local matches:</string>
    <string name="history">Match history</string>
    <string name="newgame">Start new game</string>
    <string name="localgame">Local game</string>
    <string name="gameover">Game Over!\n</string>
    <string name="win">Congratulation, you\'ve won the match!</string>
    <string name="loss">Sorry, you\'ve lost the match!</string>
    <string name="winlocal">Congratulation %1$s, you\'ve won the match!</string>
    <string name="deletematch">Do you really want to delete this match?</string>
    <string name="leavematch">Do you really want to leave this match?</string>
    <string name="online">Online</string>
    <string name="needToBeOnline">Turn on internet for access online game</string>
    <string name="versionText">Version %1$s</string>
    <string name="queenPiece">Queen</string>
    <string name="bishopPiece">Bishop</string>
    <string name="rookPiece">Rook</string>
    <string name="knightPiece">Knight</string>
    <string name="gameStartedMsg">Game Started !</string>
    <string name="searchForOpp">Searching For Opponents …</string>
    <string name="beReady">Be ready  </string>
    <string name="select_background">Select background</string>

</resources>
