<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image_preview_5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="88dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:text="@string/rulesText"
            android:textSize="35sp"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="textStart"
            android:text="@string/fullRulesRealText"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backButtonInOption"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/backText"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:shadowColor="@android:color/black"
            android:textStyle="bold"
            android:layout_gravity="center"/>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>