<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="user"
            type="kz.evilteamgenius.chessapp.models.RegisterMyUser" />
    </data>

<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/image_preview_2_light"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/spLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:orientation="vertical"
        android:layout_marginTop="270dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:background="@drawable/rounded_text"
            android:hint="@string/login"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@{user.login}"
            android:textColorHint="@android:color/white"
            android:layout_marginBottom="15dp"
        />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="20sp"
            android:background="@drawable/rounded_text"
            android:hint="@string/passwordName"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColorHint="@android:color/white"
            android:layout_marginBottom="25dp"
            android:inputType="textPassword"
            android:text="@{user.pass}"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignInText"
            android:textSize="17sp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rouded_button"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/ForgotPassText"/>

        <TextView
            android:id="@+id/createAccTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="@string/create_account_text"/>
    </LinearLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>
</layout>