<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:orientation="vertical"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pawn_queen"
            style="@style/dialogPawnUpgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/wqueen"
            android:drawableEnd="@drawable/bqueen"
            android:text="@string/queenPiece"
            android:textColor="@android:color/holo_red_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/pawn_bishop"
            style="@style/dialogPawnUpgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/wbishop"
            android:drawableEnd="@drawable/bbishop"
            android:text="@string/bishopPiece"
            android:textColor="@android:color/holo_blue_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/pawn_rook"
            style="@style/dialogPawnUpgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/wrook"
            android:drawableEnd="@drawable/brook"
            android:text="@string/rookPiece"
            android:textColor="@android:color/holo_green_dark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/pawn_knight"
            style="@style/dialogPawnUpgrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/wknight"
            android:drawableEnd="@drawable/bknight"
            android:text="@string/knightPiece"
            android:textColor="@android:color/black" />
    </LinearLayout>


</androidx.cardview.widget.CardView>