<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_preview_5"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/musicLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:alpha="0.5"
            android:background="@android:drawable/screen_background_light_transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/previousMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="previus"
                android:padding="3dp"
                android:src="@android:drawable/ic_media_previous" />

            <ImageView
                android:id="@+id/pauseMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="pause"
                android:padding="3dp"
                android:src="@android:drawable/ic_media_pause" />

            <ImageView
                android:id="@+id/playMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="@string/common_google_play_services_enable_button"
                android:padding="3dp"
                android:src="@android:drawable/ic_media_play" />

            <ImageView
                android:id="@+id/nextMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:contentDescription="next"
                android:padding="3dp"
                android:src="@android:drawable/ic_media_next" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearOfMainSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="25dp"
            android:layout_below="@id/musicLine"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp">

                <Spinner
                    android:id="@+id/languageSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/textViewDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/notificationName"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/notificationSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="70" />
            </LinearLayout>

            <LinearLayout
                style="@style/textViewDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/soundText"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/soundSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="70" />
            </LinearLayout>


            <TextView
                android:id="@+id/exitTextView"
                style="@style/textViewDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeUserText" />

            <TextView
                android:id="@+id/selectBackground"
                style="@style/textViewDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_background" />


            <TextView
                android:id="@+id/shareApp"
                style="@style/textViewDesign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shareApp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButtonInOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:shadowColor="@android:color/black"
                android:text="@string/backText"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/versionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearOfMainSettings"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:text="1.0"
            android:textSize="20sp" />
    </RelativeLayout>


</androidx.core.widget.NestedScrollView>